--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/mclyalin/frontend-project-lvl3/issues"
   },
-  "homepage": "https://github.com/mclyalin/frontend-project-lvl3#readme"
+  "homepage": "https://github.com/mclyalin/frontend-project-lvl3#readme",
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
