--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "@hexlet/code",
   "version": "1.0.0",
   "description": "Hexlet training project lvl3 -RSS aggregator-",
-  "main": "index.js",
+  "main": "./src/init.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
@@ -18,8 +19,16 @@
   },
   "homepage": "https://github.com/mclyalin/frontend-project-lvl3#readme",
   "devDependencies": {
+    "css-loader": "^5.1.1",
     "eslint": "^7.21.0",
     "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.22.1"
+    "eslint-plugin-import": "^2.22.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.24.3",
+    "webpack-cli": "^4.5.0",
+    "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "html-webpack-plugin": "^5.2.0"
   }
 }
