--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^5.24.3",
     "webpack-cli": "^4.5.0",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "bootstrap": "^5.0.0-beta2"
   }
 }
