--- a/package.json
+++ b/package.json
@@ -28,6 +28,6 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "bootstrap": "^5.0.0-beta2"
+    "bootstrap": "^4.6.0"
   }
 }
