--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
     "i18next": "^20.1.0",
+    "jquery": "^3.6.0",
     "lodash": "^4.17.21",
     "on-change": "^2.2.3",
+    "popper.js": "^1.16.1",
     "yup": "^0.32.9"
   }
 }
